[gd_scene load_steps=4 format=3 uid="uid://dq0fxd50vt0jj"]

[ext_resource type="Script" uid="uid://cvvd6ioqoyaxq" path="res://scenes/unit/item/wire.gd" id="1_eqyt5"]
[ext_resource type="TileSet" uid="uid://dqx6jkj8wpoka" path="res://resources/unit/item/items.tres" id="2_x32ey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqyt5"]
size = Vector2(256, 256)

[node name="Wire" type="CharacterBody2D"]
z_index = 13
z_as_relative = false
collision_layer = 131072
collision_mask = 0
script = ExtResource("1_eqyt5")

[node name="Component" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = ExtResource("2_x32ey")

[node name="ConnectionTop" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_x32ey")

[node name="ConnectionBottom" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_x32ey")

[node name="ConnectionLeft" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_x32ey")

[node name="ConnectionRight" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("2_x32ey")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(128, 128)
shape = SubResource("RectangleShape2D_eqyt5")
